--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "server": "cross-env NODE_ENV=development nodemon -w 'server/**/*.*' ./server/main.js",
     "server:dev": "cross-env NODE_ENV=development webpack-dev-server",
     "start": "npm run server:dev",
-    "test": "cross-env NODE_ENV=test karma start --single-run",
+    "test": "cross-env NODE_ENV=test karma start",
     "test:watch": "cross-env NODE_ENV=test karma start --reporters dots"
   },
   "dependencies": {
